nobase_include_HEADERS = pat/pat.h \
       pat/ADT/Color.h \
       pat/ADT/TypeTraits.h \
       pat/ADT/Uncopyable.h \
       pat/Listeners/PrettyResultPrinter.h \
       pat/Listeners/CSVResultPrinter.h \
       pat/PatNamespace.h \
       pat/Support/IOSFwd.h \
       pat/Support/ManagedStatic.h \
       pat/Support/OStrStream.h \
       pat/Support/OStrStream.tcc \
       pat/Support/Path.h \
       pat/Support/Timer.h \
       pat/Thread/Mutex.h \
       pat/Thread/MutexImpl.h \
       pat/Thread/Thread.h \
       pat/Thread/ThreadImpl.h
