nobase_include_HEADERS = skypat/skypat.h \
       skypat/ADT/Color.h \
       skypat/ADT/TypeTraits.h \
       skypat/ADT/Uncopyable.h \
       skypat/Listeners/PrettyResultPrinter.h \
       skypat/Listeners/CSVResultPrinter.h \
       skypat/SkypatNamespace.h \
       skypat/Support/IOSFwd.h \
       skypat/Support/ManagedStatic.h \
       skypat/Support/OStrStream.h \
       skypat/Support/OStrStream.tcc \
       skypat/Support/Path.h \
       skypat/Support/Timer.h \
       skypat/Thread/Mutex.h \
       skypat/Thread/MutexImpl.h \
       skypat/Thread/Thread.h \
       skypat/Thread/ThreadImpl.h
